# Quiz

./: main.py  makefile  pyproject.toml
data/: my_questions.json  pronto_questions.json
